Add CDEK widget and delivery address select, make some fixes

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
     <title>Дом солнце</title>
     <script id="ISDEKscript" type="text/javascript" src="https://widget.cdek.ru/widget/widjet.js" charset="utf-8"></script>
+    <script src="https://yookassa.ru/integration/simplepay/js/yookassa_construct_form.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
